# github-sourcing

./: .gitignore  README.md  TAILORED_DOCUMENTATION_OUTLINE.md  WEB_APP_GUIDE.md  config.py  main.py  pyproject.toml  requirements.txt  results.txt  search.py  web_app.py
.devcontainer/: devcontainer.json
data/raw/20251019_102119/: phase3_top_50_with_readmes.json
src/: config.py  web_app.py  workflow.py
src/data_collection/: fetch_readmes.py  fetch_users.py
src/processing/: fetch_readmes.py  rank_users.py
src/vector_search/: README.md  __init__.py  cli.py  embeddings.py  search.py
