[project]
name = "github-sourcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=3.3.1",
    "numpy>=2.1.3",
    "scikit-learn>=1.5.2",
    "streamlit>=1.39.0",
    "groq>=0.9.0",
]
